Changes
=======

3.0 (unreleased)
----------------

* ...

3.0b1 (2011/11/10)
------------------

* Initial release.
