@@ -43,6 +43,12 @@ div.jGrowl div.error {
   background-color: #cc0000;
 }
 
+/* move notification box down so actions preview/view are visible */
+div.jGrowl div.jGrowl-notification, div.jGrowl div.jGrowl-closer {
+    margin-top: 50px !important;
+    margin-right: 20px !important;
+}
+
 div.batching a, div.batching span {
   display: block;
   float: left;
